force-app/main/default/objects/PromotionMaster__c/PromotionMaster__c.object-meta.xml
<CustomObject>
    <label>Promotion Master</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>