force-app/main/default/objects/PromotionMaster__c/fields/ActiveFrom__c.field-meta.xml
<CustomField>
    <fullName>ActiveFrom__c</fullName>
    <description>Promotion นี้จะใช้ได้ตั้งแต่</description>
    <label>Active From</label>
    <type>Date</type>
</CustomField>