force-app/main/default/objects/PromotionMaster__c/fields/ActiveTo__c.field-meta.xml
<CustomField>
    <fullName>ActiveTo__c</fullName>
    <description>Promotion นี้ี้จะใช้ได้จนถึง</description>
    <label>Active To</label>
    <type>Date</type>
</CustomField>