force-app/main/default/objects/PromotionMaster__c/fields/AdditionalDetail__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDetail__c</fullName>
    <label>Promotion Detail</label>
    <type>TextArea</type>
</CustomField>