force-app/main/default/objects/PromotionMaster__c/fields/AdditionalPromotion__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPromotion__c</fullName>
    <description>คำอธิบาย Promotion เพิ่มเติม</description>
    <label>Additional Promotion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>