force-app/main/default/objects/PromotionMaster__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>รายละเอียดของ Promotion เพิ่มเติม</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>