force-app/main/default/objects/PromotionMaster__c/fields/ExternalRemark__c.field-meta.xml
<CustomField>
    <fullName>ExternalRemark__c</fullName>
    <description>ข้อมูลเพิ่มเติมสำหรับลูกค้า</description>
    <label>External Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>