force-app/main/default/objects/PromotionMaster__c/fields/InternalRemark__c.field-meta.xml
<CustomField>
    <fullName>InternalRemark__c</fullName>
    <description>ข้อมูลเพิ่มเติมสำหรับคนภายใน</description>
    <label>Internal Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>