force-app/main/default/objects/PromotionMaster__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Promotion นี้ยังสามารถใช้งานได้หรือไม่

หากอยู่ในวันที่ระหว่าง Active From และ Active To จะมีค่าเป็น True หากไม่อยู่ในช่วงระหว่างนั้นจะมีค่าเป้น False</description>
    <formula>IF(   ActiveFrom__c    &lt; TODAY()&amp;&amp; (TODAY() &lt;   ActiveTo__c  ), TRUE, FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>