force-app/main/default/objects/PromotionMaster__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion นี้ถูกใช้ใน Project ใด</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Promotion Master</relationshipLabel>
    <relationshipName>Promotion_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>