force-app/main/default/objects/PromotionMaster__c/fields/PromotionCode__c.field-meta.xml
<CustomField>
    <fullName>PromotionCode__c</fullName>
    <description>รหัส Promotion</description>
    <externalId>true</externalId>
    <label>Promotion Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>