force-app/main/default/objects/PromotionMaster__c/fields/PromotionCost__c.field-meta.xml
<CustomField>
    <fullName>PromotionCost__c</fullName>
    <description>ต้นทุนของ Promotion</description>
    <label>Promotion Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>