force-app/main/default/objects/PromotionMaster__c/fields/PromotionDiscountValue__c.field-meta.xml
<CustomField>
    <fullName>PromotionDiscountValue__c</fullName>
    <description>ราคาส่วนลดที่จะได้ถ้าไม่เลือกของ</description>
    <label>Promotion Discount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>