force-app/main/default/objects/PromotionMaster__c/fields/PromotionFor__c.field-meta.xml
<CustomField>
    <fullName>PromotionFor__c</fullName>
    <formula>&quot;This promotion is for &quot; + IF(ISBLANK(Project__c),&quot;&quot;,Project__r.Name) + 
IF(ISBLANK(UnitType__c),&quot;&quot;,&quot; Unit Type: &quot;+UnitType__r.Name)+  
IF(ISBLANK( Unit__c ),&quot;&quot;,&quot; Unit: &quot;+Unit__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion For</label>
    <type>Text</type>
</CustomField>