force-app/main/default/objects/PromotionMaster__c/fields/PromotionMasterKey__c.field-meta.xml
<CustomField>
    <fullName>PromotionMasterKey__c</fullName>
    <formula>Project__r.ProjectCode__c + &apos;_&apos; +  Unit__r.ProductCode</formula>
    <label>Promotion Master Key</label>
    <type>Text</type>
</CustomField>