force-app/main/default/objects/PromotionMaster__c/fields/PromotionPremium__c.field-meta.xml
<CustomField>
    <fullName>PromotionPremium__c</fullName>
    <description>ชื่อของที่ได้</description>
    <label>Promotion Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>