force-app/main/default/objects/PromotionMaster__c/fields/PromotionType__c.field-meta.xml
<CustomField>
    <fullName>PromotionType__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount (ส่วนลด)</fullName>
            </value>
            <value>
                <fullName>Marketing Campaign</fullName>
            </value>
            <value>
                <fullName>Premium (ของแถม)</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Personal Discount (ส่วนลดส่วนตัวของ Sales)</fullName>
            </value>
            <value>
                <fullName>Promotion on Transferred day</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>Promotion on Transferred day (ส่วนลดวันโอน)</fullName>
                <isActive>false</isActive>
                <label>Promotion on Transferred day (ส่วนลดวันโอน)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>