force-app/main/default/objects/PromotionMaster__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion ที่ผูกกับ unit</description>
    <label>Unit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promotion Master</relationshipLabel>
    <relationshipName>Promotion_Master</relationshipName>
    <type>Lookup</type>
</CustomField>