force-app/main/default/objects/PromotionMaster__c/fields/UnitCode__c.field-meta.xml
<CustomField>
    <fullName>UnitCode__c</fullName>
    <formula>Unit__r.ProductCode</formula>
    <label>Unit Code</label>
    <type>Text</type>
</CustomField>