force-app/main/default/objects/PromotionMaster__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Promotion นี้ถูกใช้ใน Unit Type ใด</description>
    <label>Unit Type</label>
    <referenceTo>UnitType__c</referenceTo>
    <relationshipLabel>Promotion Master</relationshipLabel>
    <relationshipName>Promotion_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>