force-app/main/default/objects/PromotionMaster__c/validationRules/CheckActiveFromBeforeActiveTo.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckActiveFromBeforeActiveTo</fullName>
    <active>true</active>
    <errorConditionFormula>ActiveFrom__c  &gt;   ActiveTo__c</errorConditionFormula>
    <errorMessage>Active From must be less than Active End. Please correct the dates.</errorMessage>
</ValidationRule>