force-app/main/default/objects/PromotionMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PromotionType__c</columns>
    <columns>Project__c</columns>
    <columns>UnitType__c</columns>
    <columns>Source__c</columns>
    <columns>ActiveFrom__c</columns>
    <columns>ActiveTo__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>